@@ -1,25 +1,22 @@
-plugins {
+plugins{
     alias(libs.plugins.spring.boot)
     java
 }
 
+java.sourceCompatibility = JavaVersion.VERSION_17
+java.targetCompatibility = JavaVersion.VERSION_17
+
+tasks.withType<Test> {
+    systemProperty("user.timezone", "Europe/Moscow")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    useJUnitPlatform()
+}
+
+
+tasks.withType<Jar> {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 dependencies {
-    // Spring Boot
-    implementation(libs.spring.boot.starter.web)
-    implementation(libs.spring.kafka)
-    
-    // Validation
-    implementation(libs.spring.boot.starter.validation)
-    
-    // Monitoring
-    implementation(libs.spring.boot.starter.actuator)
-    
-    // Testing
-    testImplementation(libs.spring.boot.starter.test)
-    testImplementation(libs.spring.kafka.test)
+    implementation(project(":event-storage-client")) { isTransitive = false }
 }
-
-tasks.named<org.springframework.boot.gradle.tasks.bundling.BootJar>("bootJar") {
-    archiveFileName.set("${project.name}-${project.version}.jar")
-}
-
